Clicking route links in sidebar now marks stops from that route on map. Added clear map functionality, and zoom functionality (cannot interact with map when not on mobile, need to address this). NB.. This app only works on HTTPS for mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,27 @@
    ========================================================================== */
 
 #map {
-  height: 100%;
   width: 100%;
+  height: 100%;
   left: 0;
   position: absolute;
   top: 0;
 }
+
+.btn-primary
+{
+  background-color: #9d9d9d;
+  color: #2d2f33;
+  border-color: #2d2f33;
+}
+.btn-primary:hover
+{
+  background-color: #2d2f33;
+  color: white;
+  border-color: white;
+}
+.all{margin-top: 3%; width: 150px;}
+.clearAll{ margin-top: 3%; width: 150px;}
 
 body
 {
@@ -23,12 +38,13 @@ body
 }
 
 a.nav-expander {
-  background: none repeat scroll 0 0 #222222;
-  color: #9d9d9d;
+  background: none repeat scroll 0 0 #9d9d9d;
+  color: #222222;
   display: block;
   font-size: 15px;
   font-weight: 400;
-  height: 50px;
+  height: 51px;
+  width: 4em;
   margin-right: 0;
   padding: 1em 1.6em 2em;
   position: absolute;
@@ -37,7 +53,6 @@ a.nav-expander {
   text-transform: uppercase;
   top: 0;
   transition: right 0.3s ease-in-out 0s;
-  width: 130px;
   z-index: 12;
 
   transition: right 0.3s ease-in-out 0s;
@@ -56,7 +71,7 @@ a.nav-expander.fixed {
 }
 
 .nav-expanded a.nav-expander.fixed {
-    right: 20em;
+    right: 10em;
 }
 
 nav {
@@ -65,10 +80,9 @@ nav {
   height: 100%;
   overflow: auto;
   position: fixed;
-  right: -30em;
+  right: -35em;
   font-size: 15px;
   top: 0;
-  width: 30em;
   z-index: 2000;
   
   transition: right 0.3s ease-in-out 0s;
